Ignore compiled helper file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 *.qm
 e2e/viewer/result.json
+release/sites/helper.js
 release/sites/*/model.js
 release/sites/*/*/settings.ini
 release/sites/*/*/tags.txt
