Update e2e tests to follow recent sources improvements

--- a/e2e/CMakeLists.txt
+++ b/e2e/CMakeLists.txt
@@ -7,4 +7,4 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/" "../lib/src/" "..")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} lib)
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS} lib)
