--- a/e2e/resources/settings.json
+++ b/e2e/resources/settings.json
@@ -3,7 +3,7 @@
     "sources": {
         "Anime pictures": {
             "apis": {
-                "json": ["", -1, 80, 0],
+                "json": ["", -1, 5, 0],
                 "html": ["", -1, 80, 0]
             }
         },
@@ -62,9 +62,10 @@
             }
         },
         "Shimmie": {
+            "search": ["touhou", 2, 5],
             "apis": {
-                "rss":  ["", -1, 5, -1],
-                "html": ["", -1, 5, [">", 0]]
+                "rss":  ["", -1, 70, -1, ["", 2, 5]],
+                "html": ["", -1, 70, [">", 0]]
             }
         },
         "Zerochan": {
