--- a/release/sites/Sankaku/idol.sankakucomplex.com/defaults.ini
+++ b/release/sites/Sankaku/idol.sankakucomplex.com/defaults.ini
@@ -8,8 +8,8 @@ headers="@Variant(\0\0\0\b\0\0\0\x2\0\0\0\x14\0U\0s\0\x65\0r\0-\0\x41\0g\0\x65\0
 
 [sources]
 usedefault=false
-source_1=json
-source_2=regex
+source_1=regex
+source_2=
 source_3=
 source_4=
 
