--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,10 @@ addons:
       - sshpass
       - lcov
 
+# Install coveralls sender
+before_install:
+  - pip install --user cpp-coveralls
+
 # Qt packages for OS X
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -61,12 +65,16 @@ script:
   - ./build/tests/tests
 
 after_success:
-  # Upload code coverage
+  # Upload code coverage (codecov)
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       lcov --directory . --capture --output-file coverage.info &&
       lcov --remove coverage.info '/usr/*' --output-file coverage.info &&
       lcov --list coverage.info &&
       bash <(curl -s https://codecov.io/bash)
+    ; fi
+  # Upload code coverage (coveralls)
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+      coveralls --exclude build --exclude e2e --exclude tests --exclude CrashReporter --gcov-options '\-lp'
     ; fi
   # Generate release name
   - if [[ "$TRAVIS_TAG" == "" ]]; then
