Don't run creation date tests on Travis MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,12 @@ if((DEFINED ENV{TRAVIS}) AND UNIX AND NOT APPLE AND CMAKE_COMPILER_IS_GNUCXX)
 	include(cmake/CodeCoverage.cmake)
 	setup_target_for_coverage(coverage tests coverage)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -fprofile-arcs -ftest-coverage")
+	add_definitions(-DTRAVIS=1)
+	if("$ENV{TRAVIS_OS_NAME}" STREQUAL "osx")
+		add_definitions(-DTRAVIS_OS_OSX=1)
+	elseif("$ENV{TRAVIS_OS_NAME}" STREQUAL "linux")
+		add_definitions(-DTRAVIS_OS_LINUX=1)
+	endif()
 endif()
 
 add_subdirectory(lib)
