--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,12 @@
 language: cpp
 compiler: gcc
 
-# OS X build
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-
-cache:
-  directories:
-    - release/sites/node_modules
-
 # Qt packages for Linux
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-    packages:
+    packages: &shared_deps
       - sqlite3
       - libqt5sql5-sqlite
       - qtbase5-dev
@@ -29,9 +17,39 @@ addons:
       - sshpass
       - lcov
 
+# OS X build
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      env:
+        - COVERAGE=1
+        - PACKAGE=1
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - *shared_deps
+            - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+      dist: trusty
+      sudo: required
+    - os: osx
+      env:
+        - PACKAGE=1
+
+cache:
+  directories:
+    - release/sites/node_modules
+
 # Install coveralls sender
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+  - eval "${MATRIX_EVAL}"
+  - if [[ "$COVERAGE" == "1" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       pip install --user cpp-coveralls
     ; fi
 
@@ -68,14 +86,14 @@ script:
 
 after_success:
   # Upload code coverage (codecov)
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+  - if [[ "$COVERAGE" == 1 ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       lcov --directory . --capture --output-file coverage.info &&
       lcov --remove coverage.info '/usr/*' --output-file coverage.info &&
       lcov --list coverage.info &&
       bash <(curl -s https://codecov.io/bash)
     ; fi
   # Upload code coverage (coveralls)
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+  - if [[ "$COVERAGE" == "1" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       coveralls --exclude build --exclude e2e --exclude tests --exclude CrashReporter --gcov-options '\-lp'
     ; fi
   # Generate release name
@@ -85,7 +103,7 @@ after_success:
       export BUILD_LABEL=$TRAVIS_TAG
     ; fi
   # Build and upload release
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+  - if [[ "$PACKAGE" == "1" ]] && [[ "$TRAVIS_OS_NAME" == "linux" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       cp "build/gui/Grabber" "release/Grabber" &&
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
@@ -93,7 +111,7 @@ after_success:
       export OUTPUT_FILE="Grabber_${BUILD_LABEL}_linux.zip" &&
       sshpass -p "$SSH_PASS" scp -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no Grabber.zip $SSH_USER@$SSH_HOST:$OUTPUT_FILE
     ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
+  - if [[ "$PACKAGE" == "1" ]] && [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
       cp "build/gui/Grabber" "release/Grabber" &&
       touch "release/settings.ini" &&
       rm "release/CDR.exe" &&
