--- a/release/sites/package.json
+++ b/release/sites/package.json
@@ -11,7 +11,7 @@
         "check": "tslint -c tslint.json -p tsconfig.json"
     },
     "devDependencies": {
-        "tslint": "^5.9.1",
-        "typescript": "^2.7.2"
+        "tslint": "5.11.0",
+        "typescript": "3.0.1"
     }
 }
