--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -31,14 +31,19 @@ nl_func_leave_one_liners = true
 nl_cpp_lambda_leave_one_liners = true
 nl_if_leave_one_liners = true
 nl_while_leave_one_liners = true
+nl_for_leave_one_liners = true
+
+# Preprocessor
+pp_indent_at_level = true
+pp_if_indent_code = true
 
 # Others
 indent_ternary_operator = 0
 indent_namespace = true
 mod_paren_on_return = ignore
 indent_switch_case = 4
-pp_if_indent_code = true
 cmt_indent_multi = false
+use_options_overriding_for_qt_macros = false
 
 # Line breaks
 nl_enum_brace = force # "enum {" vs "enum \n {"
@@ -60,6 +65,7 @@ sp_sizeof_paren = remove # "sizeof (int)" vs "sizeof(int)"
 sp_before_sparen = force # "if (" vs "if("
 sp_after_sparen = force # "if () {" vs "if (){"
 sp_after_cast = remove # "(int) a" vs "(int)a"
+sp_cmt_cpp_start = force # '// A' vs '//A'.
 sp_inside_braces = force # "{ 1 }" vs "{1}"
 sp_inside_braces_struct = force # "{ 1 }" vs "{1}"
 sp_inside_braces_enum = force # "{ 1 }" vs "{1}"
