Add basic pre-compiled header for lib and gui projects

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -105,3 +105,9 @@ endif()
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS} lib)
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Grabber")
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+
+# Pre-compiled header
+if(USE_PCH)
+	include(PrecompiledHeader)
+	add_precompiled_header(${PROJECT_NAME} "src/pch.h" FORCEINCLUDE SOURCE_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/pch.cpp")
+endif()
