--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,3 +14,9 @@ include_directories("src/")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS})
+
+# Pre-compiled header
+if(USE_PCH)
+	include(PrecompiledHeader)
+	add_precompiled_header(${PROJECT_NAME} "src/pch.h" FORCEINCLUDE SOURCE_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/pch.cpp")
+endif()
