--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ endif()
 
 project(Grabber)
 set(USE_SSL 1)
+set(USE_PCH 1)
 
 add_definitions(-DVERSION="6.0.4")
 add_definitions(-DPROJECT_WEBSITE_URL="https://bionus.github.io/imgbrd-grabber/")
