Add basic EH login

--- a/release/sites/E-Hentai/e-hentai.org/defaults.ini
+++ b/release/sites/E-Hentai/e-hentai.org/defaults.ini
@@ -1,3 +1,17 @@
 [General]
 name=E-Hentai
 ssl=true
+
+[sources]
+usedefault=false
+source_1=regex
+source_2=
+source_3=
+source_4=
+
+[login]
+type=post
+post\url="https://forums.e-hentai.org/index.php?act=Login&CODE=01"
+post\pseudo=UserName
+post\password=PassWord
+post\cookie=ipb_member_id
