--- a/release/sites/Pixiv/www.pixiv.net/defaults.ini
+++ b/release/sites/Pixiv/www.pixiv.net/defaults.ini
@@ -12,3 +12,12 @@ source_1=regex
 source_2=
 source_3=
 source_4=
+
+[login]
+type=oauth2
+oauth2\type=password
+oauth2\tokenUrl="https://oauth.secure.pixiv.net/auth/token"
+
+[auth]
+consumerKey=bYGKuGVw91e0NMfPGp44euvGt59s
+consumerSecret=HP3RmkgAmEGro0gn1x9ioawQE8WMfvLXDz3ZqxpK
