--- a/release/sites/Pixiv/www.pixiv.net/defaults.ini
+++ b/release/sites/Pixiv/www.pixiv.net/defaults.ini
@@ -8,8 +8,8 @@ referer_image=details
 
 [sources]
 usedefault=false
-source_1=regex
-source_2=
+source_1=json
+source_2=regex
 source_3=
 source_4=
 
