Fix CMake loggin using INFO instead of STATUS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,11 +38,11 @@ add_definitions(-DPREFIX="${CMAKE_INSTALL_PREFIX}")
 
 # SSL
 if(USE_SSL AND (NOT ANDROID))
-	message(INFO "Compiling with SSL support")
+	message(STATUS "Compiling with SSL support")
 	find_package(OpenSSL REQUIRED)
 	if (OPENSSL_FOUND)
-		message(INFO "OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
-		message(INFO "OpenSSL libraries: ${OPENSSL_LIBRARIES}")
+		message(STATUS "OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
+		message(STATUS "OpenSSL libraries: ${OPENSSL_LIBRARIES}")
 		include_directories(${OPENSSL_INCLUDE_DIR})
 		list(APPEND LIBS ${OPENSSL_LIBRARIES})
 	endif()
