--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -116,13 +116,12 @@ set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
 if(ANDROID)
 	# SSL
 	if(USE_SSL)
-		message(INFO "Compiling with SSL support")
+		message(STATUS "Compiling with SSL support")
 		set(OPENSSL_ANDROID "D:/Programmation/C++/Qt/OpenSSH-android/openssl-1.0.2p")
-		message(INFO "OpenSSL for Android dir: ${OPENSSL_ANDROID}")
+		message(STATUS "OpenSSL for Android dir: ${OPENSSL_ANDROID}")
 		list(APPEND APK_LIBS "${OPENSSL_ANDROID}/libcrypto.so" "${OPENSSL_ANDROID}/libssl.so")
 	endif()
 
-	message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 	include("qt-android-cmake/AddQtAndroidApk")
 	add_qt_android_apk("${PROJECT_NAME}_apk" ${PROJECT_NAME} BUILDTOOLS_REVISION "28.0.3" DEPENDS ${APK_LIBS} VERSION_CODE ${VERSION_ANDROID} NAME "Grabber" PACKAGE_NAME "com.bionus.grabber")
 else()
