--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,26 +45,29 @@ build_script:
   - cmake .. -G "%MAKEFILES%" -DCMAKE_BUILD_TYPE=Release
   - if not %PLATFORM%==mingw (nmake) else (mingw32-make)
   - cd ..
+  - if %APPVEYOR_REPO_TAG%==true (set GRABBER_VERSION="$(APPVEYOR_REPO_TAG_NAME)") else (set GRABBER_VERSION="nightly")
   - if %DEPLOY%==1 if not exist %APNG_PLUGIN% curl -L https://install.skycoder42.de/qtmodules/windows_x86/qt5101/qt.qt5.5101.skycoder42.png.win32_msvc2015/1.1.05.10.1.7z -o "%APNG_PLUGIN%.7z"
   - if %DEPLOY%==1 if not exist %APNG_PLUGIN% 7z x "%APNG_PLUGIN%.7z" -y -o"%APNG_PLUGIN%"
   - if %DEPLOY%==1 if not exist %MYSQL_VERSION% curl -L -O "https://dev.mysql.com/get/Downloads/MySQL-5.7/%MYSQL_VERSION%.zip"
   - if %DEPLOY%==1 if not exist %MYSQL_VERSION% 7z x "%MYSQL_VERSION%.zip" -y
-  - if %DEPLOY%==1 iscc /Q /DMyAppVersion="nightly" /DQtDir="%QTDIR%\bin" /DOpenSSLDir="C:\OpenSSL-Win32" /DMySQLDir="%APPVEYOR_BUILD_FOLDER%\%MYSQL_VERSION%" /DQtApngDll="%APPVEYOR_BUILD_FOLDER%\%APNG_PLUGIN%\5.10.1\msvc2015\plugins\imageformats\qapng.dll" releases/setup.iss
+  - if %DEPLOY%==1 iscc /Q /DMyAppVersion="%GRABBER_VERSION%" /DQtDir="%QTDIR%\bin" /DOpenSSLDir="C:\OpenSSL-Win32" /DMySQLDir="%APPVEYOR_BUILD_FOLDER%\%MYSQL_VERSION%" /DQtApngDll="%APPVEYOR_BUILD_FOLDER%\%APNG_PLUGIN%\5.10.1\msvc2015\plugins\imageformats\qapng.dll" releases/setup.iss
 
 test_script:
   - build\tests\tests.exe
 
 artifacts:
-  - path: releases\Grabber_nightly.exe
+  - path: releases\Grabber_$(GRABBER_VERSION).exe
+    name: windows_setup
 
 deploy:
+  # Nightly
   - provider: GitHub
     tag: nightly
     release: Nightly
     draft: false
     prerelease: true
     force_update: true
-    artifact: releases\Grabber_nightly.exe
+    artifact: windows_setup
     description: |
       Nightly automated builds from the develop branch.
       Automatically uploaded by AppVeyor, **use at your own risk**!
@@ -75,4 +78,21 @@ deploy:
       secure: mUYQ72KBJUaYr5Bhy2HkBkEY13Q7k27Q7IRmOGXfTOq7YnXUS9PikETcZvzCfiVu
     on:
       branch: develop
+      DEPLOY: 1
+
+  # Releases
+  - provider: GitHub
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    draft: true
+    prerelease: false
+    force_update: true
+    artifact: windows_setup
+    description: |
+      AppVeyor release
+
+      **Tag:** $(APPVEYOR_REPO_TAG_NAME)
+    auth_token:
+      secure: mUYQ72KBJUaYr5Bhy2HkBkEY13Q7k27Q7IRmOGXfTOq7YnXUS9PikETcZvzCfiVu
+    on:
+      APPVEYOR_REPO_TAG: true
       DEPLOY: 1
