Fix flaky TagDatabase tests

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -82,6 +82,7 @@ deploy:
 
   # Releases
   - provider: GitHub
+    tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
     draft: true
     prerelease: false
