--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 project(Grabber)
-set(VERSION "6.0.6")
+if((NOT DEFINED VERSION) OR (DEFINED NIGHTLY))
+	set(VERSION "6.0.6")
+endif()
 set(VERSION_ANDROID "1")
 set(USE_SSL 1)
 set(USE_PCH 1)
