--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ endif()
 project(Grabber)
 if((NOT DEFINED VERSION) OR ((DEFINED NIGHTLY) AND (NIGHTLY MATCHES "1")))
 	set(VERSION "6.0.6")
+else()
+	string(REGEX REPLACE "^v" "" VERSION VERSION)
 endif()
 set(VERSION_ANDROID "1")
 set(USE_SSL 1)
