--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -17,6 +17,5 @@ target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${LIBS})
 
 # Pre-compiled header
 if(USE_PCH)
-	include(PrecompiledHeader)
-	add_precompiled_header(${PROJECT_NAME} "src/pch.h" FORCEINCLUDE SOURCE_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/pch.cpp")
+	cotire(${PROJECT_NAME})
 endif()
