--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -144,6 +144,5 @@ endif()
 
 # Pre-compiled header
 if(USE_PCH)
-	include(PrecompiledHeader)
-	add_precompiled_header(${PROJECT_NAME} "src/pch.h" FORCEINCLUDE SOURCE_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/pch.cpp")
+	cotire(${PROJECT_NAME})
 endif()
