Add proxy for cli

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -3,7 +3,8 @@ project(cli)
 add_definitions(-DCLI=1)
 
 find_package(Qt5Core REQUIRED)
-set(QT_LIBRARIES Qt5::Core)
+find_package(Qt5Network REQUIRED)
+set(QT_LIBRARIES Qt5::Core Qt5::Network)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/" "../lib/src/" "..")
